# lib/api-spec/openapi.yaml
@@ -707,6 +707,22 @@ components:
         - faliya
         - village
 
+    CurrentAddress:
+      type: object
+      properties:
+        current_house_no:
+          type: string
+        current_area:
+          type: string
+        current_landmark:
+          type: string
+        current_city:
+          type: string
+        current_district:
+          type: string
+        current_pincode:
+          type: string
+
     Home:
       type: object
       properties:
@@ -718,6 +734,8 @@ components:
           type: string
         address:
           $ref: "#/components/schemas/Address"
+        current_address:
+          $ref: "#/components/schemas/CurrentAddress"
         members:
           type: array
           items:
@@ -740,6 +758,18 @@ components:
         faliya:
           type: string
         village:
+          type: string
+        current_house_no:
+          type: string
+        current_area:
+          type: string
+        current_landmark:
+          type: string
+        current_city:
+          type: string
+        current_district:
+          type: string
+        current_pincode:
           type: string
         members:
           type: array
@@ -764,6 +794,18 @@ components:
         faliya:
           type: string
         village:
+          type: string
+        current_house_no:
+          type: string
+        current_area:
+          type: string
+        current_landmark:
+          type: string
+        current_city:
+          type: string
+        current_district:
+          type: string
+        current_pincode:
           type: string
 
     UpdateMemberRequest:
